--- a/formulário.html
+++ b/formulário.html
@@ -12,22 +12,25 @@
       <div>
       <form action="">
         <label for="name">Nome:</label>
-        <input id="name" name="name" type="text" placeholder="digite seu nome">
+        <input id="name" name="name" type="text" pattern="[a-zA-Z\s]+" placeholder="digite nome e sobrenome"
+        required/>
+        
       </div>
 
       <div>
         <label for="email">Email:</label>
-        <input id="email"name="e-mail" type="e-mail" placeholder="seu melhor e-mail">
+        <input id="email"name="e-mail" type="e-mail" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"  placeholder="seu melhor e-mail"
+        required/>
 </div>
 
 <div>
      <label for="date"> Nascimento:</label>
-      <input id="date"name="date" type="date">
+      <input id="date"name="date" type="date" placeholder="dd/mm/aaaa" pattern="\d{2}/\d{2}/\d{4}" required/>
 </div>
 
 <div>
 <label for="senha">Senha:</label>
-        <input id="senha"name="senha" type="password">
+        <input id="senha"name="senha" type="password" required/>
         </div>
 <button type="submit">Enviar</button>
     
